* Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include GRSTx509MakeProxyFileName() and 
  GRSTx509StringToChain() (code to used hashes in cached
  proxy file names.) Bug #6357
- Change ordering of output proxy file produced by 
  GRSTx509CacheProxy so proxy private key is the 2nd PEM
  encoded block (rather than at the end.) Bug #6365
* Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.5 ====
* Tue Dec 14 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- Patch from Daniel Kouril <kouril@ics.muni.cz> to allow
  switching Globus vs system OpenSSL libraries/headers.
* Tue Dec 14 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.4 ====
* Mon Nov 15 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- Back out of (most of) redone VOMS support for committing
  to JRA1 CVS.
* Thu Oct 19 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.3 ====
* Thu Oct 19 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix Bug #5203 from Martijn Steenbakkers <msteenba>
  by fixing GACLparseEntry in gridsite-gacl.h
- Change to C style comments (mostly) in gridsite.h and
  gridsite-gacl.h (fixes part of Bug #4222 from 
  <aleks@fys.uio.no>)
- Fix Bug #4225 from <aleks@fys.uio.no> in
  GRSTgaclCredsFree()
- Add GRSTx509CachedProxyFind() and findproxyfile
  command to allow proxies to be found in proxy cache
- Change GRSTx509StoreProxy() to GRSTx509CacheProxy() for
  consistency with this and GRSTx509CachedProxyKeyFind()
* Wed Oct 18 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.2 ====
* Tue Oct 19 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- Copy code from delegation prototype into grst_x509.c
  and include htproxyput.c and grst-delegation.c
  optional targets (which depend on gSOAP.)
* Wed Oct 13 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include per-file patch to GRSTgaclFileFindAclname: 
  .gacl:FILENAME controls FILENAME if it exists.
* Tue Jul 27 2004 Andrew McNab <Andrew.McNab@man.ac.uk>