@@ -5,6 +5,8 @@
 - Change ordering of output proxy file produced by 
   GRSTx509CacheProxy so proxy private key is the 2nd PEM
   encoded block (rather than at the end.) Bug #6365
+- Add libgridsite_globus[.so|.a] in preparation for
+  separate Globus OpenSSL and system OpenSSL versions
 * Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - ==== GridSite version 1.1.5 ====
 * Tue Dec 14 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
